2007-07-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* linespec.c (minsym_found): Advance to the next line if possible.

2007-07-31  Pedro Alves  <pedro_alves@portugalmail.pt>

	* arm-wince-tdep.c (arm_wince_init_abi): Remove svr4 related call.
	* config/arm/wince.mt (TDEPFILES): Remove solib-legacy.o and
	solib-svr4.o, and add solib-target.o

2007-07-27  Michael Snyder  <msnyder@access-company.com>

	* tui/tui-data.c (tui_alloc_generic_win_info): Wrong arg for sizeof.

2007-07-26  Maciej W. Rozycki  <macro@linux-mips.org>

	* MAINTAINERS (Write After Approval): Add myself.

2007-07-26  Maciej W. Rozycki  <macro@mips.com>

	* Makefile.in (MAKEHTMLFLAGS): Also search the current directory
	for include files.

2007-07-25  Maciej W. Rozycki  <macro@mips.com>

	* Makefile.in (MAKEHTMLFLAGS): Remove "-glossary".

2007-07-24  Michael Snyder  <msnyder@access-company.com>

	* solib-svr4.c (svr4_fetch_objfile_link_map): Null pointer check of
	'buffer' must cover both branches that call strcmp (Coverity).

	* stack.c (print_frame_args): Check return value of lookup_symbol.

	* ax-gdb.c (find_field): Guard against null ptr.

2007-07-24  Ulrich Weigand  <uweigand@de.ibm.com>

	* regformats/reg-spu.dat: Fix order of npc, id registers.

2007-07-24  Ulrich Weigand  <uweigand@de.ibm.com>

	* target.c (memory_xfer_partial): Accesses to unmapped overlay
	sections should always go to the executable file.

2004-07-20  Chris Dearman  <chris@mips.com>

	* mips-tdep.c (heuristic_proc_start): Add more MIPS16 function
	prologue instructions.

2007-07-20  Maciej W. Rozycki  <macro@mips.com>

	* mips-tdep.c (mips_next_pc): Use is_mips16_addr() instead of
	a direct test.

2007-07-20  Chris Dearman  <chris@mips.com>
            Maciej W. Rozycki  <macro@mips.com>

	* mips-tdep.c (fetch_mips_16): Fix typos and reformat the
	description.

2007-07-17  Pedro Alves  <pedro_alves@portugalmail.pt>
	    Daniel Jacobowitz  <dan@codesourcery.com>
