@@ -1,3 +1,8 @@
+2007-07-31  Michael Snyder  <msnyder@access-company.com>
+
+	* printcmd.c (build_address_symbolic): Remove dead code and dead 
+	variable.
+
 2007-07-31  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* linespec.c (minsym_found): Advance to the next line if possible.
